deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gandalf
  labels:
    app: gandalf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gandalf
  template:
    metadata:
      labels:
        app: gandalf
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 2000
      containers:
        - name: gandalf
          image: wikle/gandalf:latest
          ports:
            - protocol: TCP
              containerPort: 5000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 9
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 9
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: gandalf-svc
spec:
  type: ClusterIP
  selector:
    app: gandalf
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: mediastack-ipwhitelist@kubernetescrd
  labels:
    app: gandalf
  name: gandalf
  namespace: mediastack
spec:
  ingressClassName: traefik
  rules:
  - host: gandalf.dubardcoolen.fr
    http:
      paths:
      - backend:
          service:
            name: gandalf-svc
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - gandalf.dubardcoolen.fr
    secretName: gandalf-tls
